syntax = "proto3";
option csharp_namespace = "IotGrpcLearning.Proto";

package iot.device;

service DeviceGateway {
  // Unary hello (already implemented)
  rpc Init (DeviceInitRequest) returns (DeviceInitResponse);

  // Client-streaming telemetry → single ack
  rpc SendTelemetry (stream TelemetryRequest) returns (TelemetryResponse);

  // Server-streaming (device subscribes; server pushes commands)
  rpc SubscribeCommands (DeviceId) returns (stream Command);

  // Sidirectional heartbeat
  rpc Heartbeat (stream DeviceStatusRequest) returns (stream Command);
}

// A device greets the gateway once it connects
message DeviceInitRequest {
  string device_id = 1;   // e.g., "station 1"
  string fw_version = 2;  // firmware version, e.g., "1.0.3"
}

message DeviceInitResponse {
  string message = 1;     // friendly text
  int64 server_unix_ms = 2; // server time in ms since epoch
}


// Telemetry Data 
message TelemetryRequest {
  string device_id = 1;         // which device sent this
  string metric = 2;            // e.g., "temperature", "rpm"
  double value = 3;             // numeric value
  int64 unix_ms = 4;            // event time (ms since epoch)
  map<string, string> tags = 5; // optional labels: zone=A1, unit=C
}

message TelemetryResponse {
  int32 accepted = 1;
  int32 rejected = 2;
  string note = 3;              // optional info (e.g., "ok", "some invalid")
}


// Heartbeat status from device → server
message DeviceStatusRequest {
  string device_id = 1;
  string health    = 2; // "OK" | "WARN" | "CRIT"
  string details   = 3; // optional free text
  int64  unix_ms   = 4; // ms since epoch (time when status was observed)
  map<string, string> tags = 5; // optional labels
}


// Command message and server-streaming RPC
message DeviceId {
  string id = 1;
}

message Command {
  string command_id = 1;            // server-generated GUID
  string name = 2;                  // e.g., "Ping", "EnterSafeMode"
  map<string, string> args = 3;     // optional, e.g., {"level":"crit"}
}



